syntax = "proto3";

package libops.v1;

import "google/protobuf/descriptor.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "libops/v1/options/scope.proto";
import "libops/v1/admin/project.proto";
import "libops/v1/admin/organization.proto";
import "libops/v1/admin/site.proto";

option go_package = "github.com/libops/platform/proto/libops/v1;libopsv1";

// AdminOrganizationService manages admin-level organization operations with full access
service AdminOrganizationService {
  // Get organization configuration (admin view - includes sensitive fields)
  rpc GetOrganization(AdminGetOrganizationRequest) returns (AdminGetOrganizationResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Create a new organization (admin - can set all fields)
  rpc CreateOrganization(AdminCreateOrganizationRequest) returns (AdminCreateOrganizationResponse) {
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Update organization metadata (admin - can update all fields)
  rpc UpdateOrganization(AdminUpdateOrganizationRequest) returns (AdminUpdateOrganizationResponse) {
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Delete a organization (must have no projects)
  rpc DeleteOrganization(AdminDeleteOrganizationRequest) returns (google.protobuf.Empty) {
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // List all organizations (admin view)
  rpc ListOrganizations(AdminListOrganizationsRequest) returns (AdminListOrganizationsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // List projects for a organization (admin view)
  rpc ListOrganizationProjects(AdminListOrganizationProjectsRequest) returns (AdminListOrganizationProjectsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }
}

// AdminSiteService manages admin-level site operations with full access
service AdminSiteService {
  // List sites (admin view)
  rpc ListSites(AdminListSitesRequest) returns (AdminListSitesResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Get site configuration (admin view - includes internal GCP details)
  rpc GetSite(AdminGetSiteRequest) returns (AdminGetSiteResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Create a new site (admin - can set all fields)
  rpc CreateSite(AdminCreateSiteRequest) returns (AdminCreateSiteResponse) {
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Update site configuration (admin - can update all fields)
  rpc UpdateSite(AdminUpdateSiteRequest) returns (AdminUpdateSiteResponse) {
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Delete a site
  rpc DeleteSite(AdminDeleteSiteRequest) returns (google.protobuf.Empty) {
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // List all sites across all organizations/projects (admin only)
  rpc ListAllSites(AdminListAllSitesRequest) returns (AdminListAllSitesResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Get SSH keys for a site VM (called by VM controller with GSA auth)
  rpc GetSiteSSHKeys(GetSiteSSHKeysRequest) returns (GetSiteSSHKeysResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Get secrets for a site VM (called by VM controller with GSA auth)
  rpc GetSiteSecrets(GetSiteSecretsRequest) returns (GetSiteSecretsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Get firewall rules for a site VM (called by VM controller with GSA auth)
  rpc GetSiteFirewall(GetSiteFirewallRequest) returns (GetSiteFirewallResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Site VM check-in (updates checkin_at timestamp)
  rpc SiteCheckIn(SiteCheckInRequest) returns (SiteCheckInResponse) {
  }

  // Sync site manifest - returns state hash and signed URLs to blobs (for eventual consistency)
  // Called by site VMs every ~24h for eventual consistency
  rpc SyncManifest(SyncManifestRequest) returns (SyncManifestResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Get blob content via signed GCS URL (optional - VMs can fetch directly from GCS)
  rpc GetBlob(GetBlobRequest) returns (GetBlobResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

// AdminProjectService manages admin-level project operations with full access
service AdminProjectService {
  // Get project configuration (admin view - includes sensitive fields)
  rpc GetProject(AdminGetProjectRequest) returns (AdminGetProjectResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Create a new project (admin - can set all fields)
  rpc CreateProject(AdminCreateProjectRequest) returns (AdminCreateProjectResponse) {
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Update project configuration (admin - can update all fields)
  rpc UpdateProject(AdminUpdateProjectRequest) returns (AdminUpdateProjectResponse) {
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // Delete a project (must have no sites)
  rpc DeleteProject(AdminDeleteProjectRequest) returns (google.protobuf.Empty) {
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // List projects for a organization (admin view)
  rpc ListProjects(AdminListProjectsRequest) returns (AdminListProjectsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }

  // List all projects across all organizations (admin only)
  rpc ListAllProjects(AdminListAllProjectsRequest) returns (AdminListAllProjectsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
    option (libops.v1.options.required_scope) = { resource: RESOURCE_TYPE_SYSTEM, level: ACCESS_LEVEL_ADMIN, oauth_scopes: "admin:system" };
  }
}

// AdminReconciliationService handles reconciliation operations
// Called by Cloud Run reconciliation services with GSA authentication
service AdminReconciliationService {
  // Get reconciliation run details from control-plane database
  rpc GetReconciliationRun(GetReconciliationRunRequest) returns (GetReconciliationRunResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Update reconciliation run status
  rpc UpdateReconciliationStatus(UpdateReconciliationStatusRequest) returns (UpdateReconciliationStatusResponse) {
  }

  // Generate terraform variables JSON from database state
  rpc GenerateTerraformVars(GenerateTerraformVarsRequest) returns (GenerateTerraformVarsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

// ==============================================================================
// REQUEST/RESPONSE - GetProject (Admin)
// ==============================================================================

message AdminGetProjectRequest {
  string organization_id = 1;
  string project_id = 2;
}

message AdminGetProjectResponse {
  libops.v1.admin.AdminProjectConfig project = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - CreateProject (Admin)
// ==============================================================================

message AdminCreateProjectRequest {
  string organization_id = 1;
  libops.v1.admin.AdminProjectConfig project = 2;
}

message AdminCreateProjectResponse {
  libops.v1.admin.AdminProjectConfig project = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - UpdateProject (Admin)
// ==============================================================================

message AdminUpdateProjectRequest {
  string organization_id = 1;
  string project_id = 2;
  libops.v1.admin.AdminProjectConfig project = 3;
  google.protobuf.FieldMask update_mask = 4;
}

message AdminUpdateProjectResponse {
  libops.v1.admin.AdminProjectConfig project = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - DeleteProject (Admin)
// ==============================================================================

message AdminDeleteProjectRequest {
  string organization_id = 1;
  string project_id = 2;
}

// ==============================================================================
// REQUEST/RESPONSE - ListProjects (Admin)
// ==============================================================================

message AdminListProjectsRequest {
  optional string organization_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message AdminListProjectsResponse {
  repeated libops.v1.admin.AdminProjectConfig projects = 1;
  string next_page_token = 2;
}

// ==============================================================================
// REQUEST/RESPONSE - ListAllProjects (Admin Only)
// ==============================================================================

message AdminListAllProjectsRequest {
  int32 page_size = 1;
  string page_token = 2;
  optional string filter = 3;  // e.g., "organization_id=foo" or "billing_account=bar"
}

message AdminListAllProjectsResponse {
  repeated libops.v1.admin.AdminProjectConfig projects = 1;
  string next_page_token = 2;
}

// ==============================================================================
// REQUEST/RESPONSE - GetOrganization (Admin)
// ==============================================================================

message AdminGetOrganizationRequest {
  string organization_id = 1;
}

message AdminGetOrganizationResponse {
  libops.v1.admin.AdminFolderConfig folder = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - CreateOrganization (Admin)
// ==============================================================================

message AdminCreateOrganizationRequest {
  libops.v1.admin.AdminFolderConfig folder = 1;
}

message AdminCreateOrganizationResponse {
  string organization_id = 1;
  libops.v1.admin.AdminFolderConfig folder = 2;
}

// ==============================================================================
// REQUEST/RESPONSE - UpdateOrganization (Admin)
// ==============================================================================

message AdminUpdateOrganizationRequest {
  string organization_id = 1;
  libops.v1.admin.AdminFolderConfig folder = 2;
  google.protobuf.FieldMask update_mask = 3;
}

message AdminUpdateOrganizationResponse {
  libops.v1.admin.AdminFolderConfig folder = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - DeleteOrganization (Admin)
// ==============================================================================

message AdminDeleteOrganizationRequest {
  string organization_id = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - ListOrganizations (Admin)
// ==============================================================================

message AdminListOrganizationsRequest {
  int32 page_size = 1;
  string page_token = 2;
  optional string filter = 3;  // e.g., "gcp_parent=folders/123"
}

message AdminListOrganizationsResponse {
  repeated libops.v1.admin.AdminFolderConfig organizations = 1;
  string next_page_token = 2;
}

// ==============================================================================
// REQUEST/RESPONSE - ListOrganizationProjects (Admin)
// ==============================================================================

message AdminListOrganizationProjectsRequest {
  string organization_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message AdminListOrganizationProjectsResponse {
  repeated string project_ids = 1;
  string next_page_token = 2;
}

// ==============================================================================
// REQUEST/RESPONSE - GetSite (Admin)
// ==============================================================================

message AdminGetSiteRequest {
  string organization_id = 1;
  string project_id = 2;
  string site_name = 3;
}

message AdminGetSiteResponse {
  libops.v1.admin.AdminSiteConfig site = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - CreateSite (Admin)
// ==============================================================================

message AdminCreateSiteRequest {
  string organization_id = 1;
  string project_id = 2;
  libops.v1.admin.AdminSiteConfig site = 3;
}

message AdminCreateSiteResponse {
  libops.v1.admin.AdminSiteConfig site = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - UpdateSite (Admin)
// ==============================================================================

message AdminUpdateSiteRequest {
  string organization_id = 1;
  string project_id = 2;
  string site_name = 3;
  libops.v1.admin.AdminSiteConfig site = 4;
  google.protobuf.FieldMask update_mask = 5;
}

message AdminUpdateSiteResponse {
  libops.v1.admin.AdminSiteConfig site = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - DeleteSite (Admin)
// ==============================================================================

message AdminDeleteSiteRequest {
  string organization_id = 1;
  string project_id = 2;
  string site_name = 3;
}

// ==============================================================================
// REQUEST/RESPONSE - ListSites (Admin)
// ==============================================================================

message AdminListSitesRequest {
  optional string organization_id = 1;
  optional string project_id = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message AdminListSitesResponse {
  repeated libops.v1.admin.AdminSiteConfig sites = 1;
  string next_page_token = 2;
}

// ==============================================================================
// REQUEST/RESPONSE - ListAllSites (Admin Only)
// ==============================================================================

message AdminListAllSitesRequest {
  int32 page_size = 1;
  string page_token = 2;
  optional string filter = 3;  // e.g., "organization_id=foo" or "status=active"
}

message AdminListAllSitesResponse {
  repeated libops.v1.admin.AdminSiteConfig sites = 1;
  string next_page_token = 2;
}

// ==============================================================================
// REQUEST/RESPONSE - GetSiteSSHKeys (VM Controller)
// ==============================================================================

message GetSiteSSHKeysRequest {
  string site_id = 1;  // Site public ID
}

message SSHKey {
  string public_key = 1;
  string name = 2;
  string fingerprint = 3;
  string github_username = 4;
}

message GetSiteSSHKeysResponse {
  repeated SSHKey keys = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - GetSiteSecrets (VM Controller)
// ==============================================================================

message GetSiteSecretsRequest {
  string site_id = 1;  // Site public ID
}

message Secret {
  string key = 1;
  string value = 2;
}

message GetSiteSecretsResponse {
  repeated Secret secrets = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - GetSiteFirewall (VM Controller)
// ==============================================================================

message GetSiteFirewallRequest {
  string site_id = 1;  // Site public ID
}

message FirewallRule {
  string protocol = 1;  // tcp, udp, icmp, etc.
  int32 port = 2;       // port number (0 if not applicable)
  string source = 3;    // source CIDR or IP
  string action = 4;    // accept, deny, drop, reject
}

message GetSiteFirewallResponse {
  repeated FirewallRule rules = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - SiteCheckIn (VM Controller)
// ==============================================================================

message SiteCheckInRequest {
  string site_id = 1;  // Site public ID
}

message SiteCheckInResponse {
  bool success = 1;
  string message = 2;
}

// ==============================================================================
// REQUEST/RESPONSE - SyncManifest (VM Controller - Eventual Consistency)
// ==============================================================================

message SyncManifestRequest {
  string site_id = 1;  // Site public ID
  optional string current_state_hash = 2;  // For ETag optimization (304 Not Modified)
}

message SyncManifestResponse {
  string state_hash = 1;  // Current state hash for this site
  StateBlobs blobs = 2;   // Signed URLs to GCS blobs
}

message StateBlobs {
  string ssh_keys_url = 1;   // Signed GCS URL to ssh-keys.json
  string secrets_url = 2;    // Signed GCS URL to secrets.json
  string firewall_url = 3;   // Signed GCS URL to firewall.json
}

// ==============================================================================
// REQUEST/RESPONSE - GetBlob (VM Controller - Optional Direct Fetch)
// ==============================================================================

message GetBlobRequest {
  string site_id = 1;    // Site public ID
  string blob_type = 2;  // "ssh_keys", "secrets", "firewall"
}

message GetBlobResponse {
  bytes data = 1;          // Blob content (JSON)
  string content_type = 2; // "application/json"
}

// ==============================================================================
// REQUEST/RESPONSE - GetReconciliationRun (Reconciliation Service)
// ==============================================================================

message GetReconciliationRunRequest {
  string run_id = 1;
}

message GetReconciliationRunResponse {
  string run_id = 1;
  string run_type = 2;  // terraform or reconciliation
  optional string reconciliation_type = 3;  // ssh_keys, secrets, firewall, general
  repeated string modules = 4;  // For terraform runs
  repeated int64 target_site_ids = 5;  // For reconciliation runs
  repeated string event_ids = 6;
  optional int64 organization_id = 7;
  optional int64 project_id = 8;
  optional int64 site_id = 9;
  string status = 10;
}

// ==============================================================================
// REQUEST/RESPONSE - UpdateReconciliationStatus (Reconciliation Service)
// ==============================================================================

message UpdateReconciliationStatusRequest {
  string run_id = 1;
  string status = 2;  // pending, triggered, running, completed, failed
  optional string error_message = 3;
}

message UpdateReconciliationStatusResponse {
  bool success = 1;
}

// ==============================================================================
// REQUEST/RESPONSE - GenerateTerraformVars (Reconciliation Service)
// ==============================================================================

message GenerateTerraformVarsRequest {
  optional int64 organization_id = 1;
  optional int64 project_id = 2;
  optional int64 site_id = 3;
}

message GenerateTerraformVarsResponse {
  string tfvars_json = 1;  // JSON-encoded terraform variables
}
